# planarity

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: main.ink
src/: config.rs  cursor.rs  fields.rs  generate.rs  input.rs  main.rs  story.rs
src/story/: story_assets.rs
