[package]
name = "planarity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_mod_picking = "0.16.0"
bevy_prototype_lyon = "0.9.0"

[features]
default = ["fast-compile"]
# disable this for wasm or release
fast-compile = ["bevy/dynamic_linking"]

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
