[package]
name = "planarity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_mod_picking = "0.16.0"
bevy_prototype_lyon = "0.9.0"
geo = "0.26.0"
itertools = "0.11.0"
petgraph = "0.6.4"
rand = "0.8.5"
tap = "1.0.1"

[features]
default = ["fast-compile"]
# disable this for wasm or release
fast-compile = ["bevy/dynamic_linking"]

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
wasm-bindgen = {git = "https://github.com/rustwasm/wasm-bindgen.git"}
