[package]
name = "planarity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy-inspector-egui = "0.21.0"
bevy_egui = "0.23.0"
bevy_mod_picking = "0.17.0"
bevy_prototype_lyon = "0.10.0"
bladeink = "1.0.1"
geo = "0.27.0"
itertools = "0.12.0"
iyes_progress = { version = "0.10.0", features = ["assets"] }
leafwing-input-manager = "0.11.1"
petgraph = "0.6.4"
rand = "0.8.5"
tap = "1.0.1"
tempfile = "3.8.1"
thiserror = "1.0.50"

[features]
default = ["fast-compile", "assets"]
# disable this for release
assets = ["bevy/asset_processor", "bevy/file_watcher"]
# disable this for wasm or release
fast-compile = ["bevy/dynamic_linking"]

[profile.dev]
incremental = true
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
wasm-bindgen = {git = "https://github.com/rustwasm/wasm-bindgen.git"}
